--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -2,19 +2,25 @@
   class: section-1
   img: hero-image-sm.jpg
   img_float: right
-  title: Title1
+  title:
+    - big_title: I can do this.
+    - sm_title: Service1
   paragraph: Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 
 - linkName: Tab2
   class: section-2
   img: hero-image-sm.jpg
   img_float: left
-  title: Title2
+  title:
+    - big_title: I can do that.
+    - sm_title: Service2
   paragraph: Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 
 - linkName: Tab3
   class: section-3
   img: hero-image-sm.jpg
   img_float: right
-  title: Title3
+  title:
+    - big_title: And I can do this.
+    - sm_title: Service3
   paragraph: Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
